<resources>
    <string name="app_name" translatable="false">Cyfrowy Uśmiech</string>

    <!-- BottomView -->
    <string name="menu_home">Home</string>
    <string name="menu_report">Report</string>
    <string name="menu_help">Help</string>
    <string name="menu_about">About</string>

    <!-- Home -->
    <string name="home_save_records">Save</string>
    <string name="home_first_row_app">App</string>
    <string name="home_first_row_value" translatable="false">g CO2e/min</string>
    <string name="home_first_row_quantity" translatable="false">min</string>
    <string name="home_get_data_button">Get from phone</string>
    <string name="home_toast_save">Saved records</string>
    <string name="home_toast_get_phone" translatable="false">Pobieranie z telefonu informacji może czasem być niedokładne</string>

    <!-- Report -->
    <string name="report_report_1">Your total use:</string>
    <string name="report_report_2">Usage:</string>
    <string name="report_report_2_extra">Usage (Weeks start from monday to sunday):</string>
    <string name="report_report_3">Use by top 3 app:</string>
    <string name="report_options_0">Week</string>
    <string name="report_options_1">Month</string>
    <string name="report_options_2">Year</string>
    <string name="report_options_3">All</string>

    <!-- About -->
    <string name="about_about" translatable="false">
        Kampania Cyfrowy Uśmiech to projekt tworzony przez grupę ambitnych uczniów z Zespołu Szkół
        Technicznych i Ogólnokształcących w Jarosławiu. Naszą misją jest zwiększanie świadomości na
        temat cyfrowego śladu węglowego i wpływu otaczającej nas technologii na środowisko. W ramach
        akcji chcemy przekazać wiedzę dotyczącą sposobów na zmniejszenie własnego cyfrowego śladu
        węglowego, a także udostępnić pomocne narzędzia do jego monitorowania. Cieszymy się, że możemy
        wspólnie budować bardziej świadome i zrównoważone nawyki przyjazne dla naszej planety.
    </string>
    <string name="about_about_2" translatable="false">Nasz zespół:</string>
    <string-array name="about_list" translatable="false">
        <item>Karolina Łakomy</item>
        <item>Adrian Gamracy</item>
        <item>Tobiasz Liszka</item>
        <item>Mateusz Skupień</item>
        <item>Aleksandra Kubas</item>
        <item>Bartosz Popek</item>
        <item>Fabian Bar</item>
        <item>Gabriel Malach</item>
        <item>Jakub Mazurkiewicz</item>
        <item>Michał Dubiel</item>
        <item>Patryk Balawender</item>
        <item>Polina Horodovikova</item>
        <item>Weronika Dębicka</item>
    </string-array>
    <string name="about_about_3" translatable="false">
        Kampania Cyfrowy Uśmiech powstaje dzięki finansowaniu w Programie „Akcelerator Pro”
        organizowanym przez Fundację Inter Cars i Fundację Szkoła z Klasą.
    </string>

    <!-- HELP -->
    <string translatable="false" name="help_title">Kodeks Dobrych Praktyk Ograniczania Cyfrowego Śladu Węglowego</string>
    <string-array translatable="false" name="help_array_text">
        <item>Ogranicz czas, który spędzasz na scrollowaniu</item>
        <item>Czyść skrzynkę mailową</item>
        <item>Odłącz z prądu wszystkie nieużywane ładowarki</item>
        <item>Zapisuj pliki na komputerze</item>
        <item>Ogranicz wideokonferencje</item>
        <item>Nie zostawiaj urządzeń w trybie czuwania</item>
        <item>Przechowuj pliki czy zdjęci na dyskach, a nie w chmurach</item>
        <item>Dbaj o sprzęt elektroniczny</item>
        <item>Wymieniaj sprzęty elektroniczne tak rzadko, jak to możliwe</item>
        <item>Korzystaj z usług cyfrowych na mniejszych urządzeniach</item>
        <item>Pobieraj ulubione utwory z serwisów streamingowych na telefon lub komputer</item>
        <item>Upewnijmy się, że sprzęt, który kupujesz poddawany jest recyklingowi lub ponownemu wykorzystaniu</item>
        <item>Nie zgadzaj się na ciasteczka – poza ochroną prywatności ograniczysz przesył danych</item>
        <item>Pokazuj swoim dostawcom, że ich ślad węglowy ma dla Ciebie znaczenie</item>
    </string-array>
    <string translatable="false" name="help_app_tip">Spróbuj ograniczyć użytkowanie aplikacji</string>
</resources>